# python_repository_basic_setup

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json  onCreateCommand.sh
.github/workflows/: ci.yaml  mkdocs_not_active.yaml
docs/: index.md
docs/assets/: style.css
docs/mkdocs_scripts/: gen_pages.py
src/: __init__.py  notebook.ipynb
src/functions/: __init__.py  example_function.py
tests/functions/: test_example_function.py
